# nostr-mcp-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
contract/coverage/: POLICY.md  profiles.toml  release-crates.toml  required-crates.toml  rollout.toml
crates/nostr-mcp/: Cargo.toml
crates/nostr-mcp-core/: Cargo.toml
crates/nostr-mcp-core/src/: client.rs  error.rs  event_authoring_service.rs  event_filters.rs  events.rs  follows.rs  follows_service.rs  fs.rs  group_moderation_service.rs  groups.rs  key_store.rs  keys.rs  keystore.rs  lib.rs  metadata.rs  nip01.rs  nip05.rs  nip19.rs  nip30.rs  nip44.rs  nip58.rs  nip89.rs  polls.rs  profile_service.rs  protocol_publishing_service.rs  publish.rs  reference_parser.rs  references.rs  relay_info.rs  relays.rs  replies.rs  secrets.rs  settings.rs
crates/nostr-mcp-core/src/follows/: tests.rs
crates/nostr-mcp-core/src/keys/: tests.rs
crates/nostr-mcp-core/src/metadata/: tests.rs
crates/nostr-mcp-core/src/nip05/: tests.rs
crates/nostr-mcp-core/src/nip19/: tests.rs
crates/nostr-mcp-core/src/nip30/: tests.rs
crates/nostr-mcp-core/src/nip44/: tests.rs
crates/nostr-mcp-core/src/polls/: tests.rs
crates/nostr-mcp-core/src/profile_service/: tests.rs
crates/nostr-mcp-nip46/: Cargo.toml
crates/nostr-mcp-nip46/src/: connect.rs  error.rs  lib.rs  message.rs  methods.rs  permission.rs  session.rs  tracker.rs  uri.rs
crates/nostr-mcp-nip46/tests/: nip46_conformance.rs
crates/nostr-mcp-policy/: Cargo.toml
crates/nostr-mcp-policy/src/: audit.rs  baseline.rs  capability.rs  decision.rs  identity.rs  lib.rs  signer.rs
crates/nostr-mcp-server/: Cargo.toml
crates/nostr-mcp-server/src/: catalog.rs  lib.rs  runtime.rs  service.rs  util.rs
crates/nostr-mcp-server/src/host_runtime/: error.rs  fs.rs  key_store.rs  keystore.rs  mod.rs  secrets.rs
crates/nostr-mcp-tools/: Cargo.toml
crates/nostr-mcp-tools/src/: lib.rs  runtime.rs  server.rs  util.rs
crates/nostr-mcp-tools/src/host_runtime/: client.rs  error.rs  fs.rs  key_store.rs  keystore.rs  mod.rs  secrets.rs  settings.rs  storage.rs
crates/nostr-mcp-tools/src/server/: event_authoring.rs  event_queries.rs  follows.rs  groups.rs  keys.rs  metadata.rs  protocol_publishing.rs  protocol_utils.rs  relays.rs
crates/nostr-mcp-tools/tests/golden/read_only/: events_parse_emojis.json  events_parse_refs.json  follows_get_local_settings.json  keys_derive_public.json  keys_export_watch_only_bech32.json  keys_list_watch_only.json  keys_verify_invalid.json  keys_verify_valid_nsec.json  metadata_get_local_settings.json
crates/nostr-mcp-tools/tests/golden/write_capable/: events_create_text.json  events_sign.json  follows_add_local.json  follows_remove_local.json  keys_remove.json  keys_rename_label.json  keys_set_active.json  metadata_set_local.json
crates/nostr-mcp-transport-stdio/: Cargo.toml
crates/nostr-mcp-transport-stdio/src/: lib.rs
crates/nostr-mcp-types/: Cargo.toml
crates/nostr-mcp-types/src/: common.rs  config.rs  events.rs  follows.rs  groups.rs  key_store.rs  keys.rs  lib.rs  metadata.rs  nip05.rs  nip19.rs  nip30.rs  nip44.rs  nip58.rs  nip89.rs  polls.rs  publish.rs  references.rs  registry.rs  relay_info.rs  relays.rs  replies.rs  settings.rs
crates/nostr-mcp-types/tests/: coverage_contract.rs
crates/nostr-mcp/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: coverage.rs  main.rs
nostr-mcp-core/: Cargo.toml
nostr-mcp-core/src/: client.rs  error.rs  events.rs  follows.rs  groups.rs  key_store.rs  keys.rs  keystore.rs  lib.rs  metadata.rs  nip05.rs  nip19.rs  nip30.rs  nip44.rs  nip58.rs  nip89.rs  polls.rs  publish.rs  references.rs  relay_info.rs  replies.rs  storage.rs
nostr-mcp-tools/: Cargo.toml
nostr-mcp-tools/src/: lib.rs  runtime.rs  server.rs  util.rs
nostr-mcp-tools/src/server/: event_queries.rs  keys.rs  protocol_utils.rs
scripts/ci/: guard_coverage_contract.sh  guard_registry_drift.sh
src/: key_store.rs  storage.rs
