[package]
name = "nostr-mcp-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
license = "Unlicense"
homepage = "https://github.com/nostr-mcp/nostr-mcp-rs"
repository = "https://github.com/nostr-mcp/nostr-mcp-rs.git"
readme = "README.md"

authors = ["Nostr MCP Developers"]
description = "Nostr MCP Rust SDK"
keywords = ["nostr", "mcp", "rust"]

[workspace]
resolver = "2"

[dependencies]
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
keyring = { version = "2", optional = true }
nostr = { version = "0.44.1" }
nostr-relay-pool = { version = "0.44.0" }
nostr-sdk = { version = "0.44.1" }
rand = "0.8"
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
zeroize = "1.7"

[features]
keyring = ["dep:keyring"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
