[workspace]
members = [
    "nostr-mcp-core",
    "nostr-mcp-tools",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "Unlicense"
homepage = "https://github.com/nostr-mcp/nostr-mcp-rs"
repository = "https://github.com/nostr-mcp/nostr-mcp-rs.git"
version = "0.1.0"
readme = "README.md"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
keyring = "2"
nostr = { version = "0.44.1", features = ["nip44"] }
nostr-relay-pool = { version = "0.44.0" }
nostr-sdk = { version = "0.44.1" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "0.8.1" }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tracing = "0.1"
zeroize = "1.7"

[workspace.metadata]
authors = ["Nostr MCP Developers"]
description = "Nostr MCP Rust SDK"
readme = "README.md"
repository = "https://github.com/nostr-mcp/nostr-mcp-rs"
license-file = "LICENSE"
keywords = ["nostr", "mcp", "rust"]
