[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
license = "Unlicense"
authors = ["Tyson Lupul <tyson@radroots.org>"]
readme = "README.md"
repository = "https://github.com/nostr-mcp/nostr-mcp-rs"
homepage = "https://github.com/nostr-mcp/nostr-mcp-rs"
rust-version = "1.92.0"

[workspace.dependencies]
nostr-mcp-types = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-types" }
nostr-mcp-policy = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-policy" }
nostr-mcp-core = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-core" }
nostr-mcp-nip46 = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-nip46" }
nostr-mcp = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp" }
nostr-mcp-server = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-server" }
nostr-mcp-transport-stdio = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-transport-stdio" }
nostr-mcp-tools = { version = "0.1.0-alpha.1", path = "crates/nostr-mcp-tools" }
aes-gcm = "0.10"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
glob = "0.3"
keyring = "2"
nostr = { version = "0.44.2", features = ["nip44"] }
nostr-relay-pool = { version = "0.44.0" }
nostr-sdk = { version = "0.44.1" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "0.8.1" }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
toml = "0.8"
tracing = "0.1"
zeroize = "1.7"
