[package]
name = "nostr-mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
keyring = { version = "2", optional = true }
nostr = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync"] }
zeroize = { workspace = true }

[features]
keyring = ["dep:keyring"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
