[package]
name = "nostr-mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Nostr MCP Rust SDK"
keywords = ["nostr", "mcp", "rust"]

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true, optional = true }
nostr = { workspace = true }
nostr-relay-pool = { workspace = true }
nostr-sdk = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true }

[features]
keyring = ["dep:keyring"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
