[package]
name = "nostr-mcp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Nostr MCP Rust SDK"
keywords = ["nostr", "mcp", "rust"]

[dependencies]
base64 = { workspace = true }
nostr = { workspace = true }
nostr-mcp-types = { workspace = true }
nostr-relay-pool = { workspace = true }
nostr-sdk = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nostr-relay-builder = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
