[package]
name = "nostr-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Transport-agnostic Nostr MCP server foundations"
keywords = ["nostr", "mcp", "server"]

[dependencies]
nostr-mcp-types = { workspace = true }
