[package]
name = "nostr-mcp-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Nostr MCP tools server"
keywords = ["nostr", "mcp", "rust"]

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true, optional = true }
nostr = { workspace = true }
nostr-mcp-core = { workspace = true }
nostr-mcp-policy = { workspace = true }
nostr-mcp-types = { workspace = true }
nostr-sdk = { workspace = true }
rand = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "schemars"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "sync", "time"] }
tracing = { workspace = true }
zeroize = { workspace = true }

[features]
keyring = ["dep:keyring"]

[dev-dependencies]
tempfile = { workspace = true }
