[package]
name = "nostr-mcp-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Nostr MCP tools server"
keywords = ["nostr", "mcp", "rust"]

[dependencies]
anyhow = { workspace = true }
nostr = { workspace = true }
nostr-mcp-core = { workspace = true }
nostr-mcp-policy = { workspace = true }
nostr-mcp-server = { workspace = true }
nostr-mcp-types = { workspace = true }
nostr-sdk = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-io", "schemars"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "signal", "sync", "time"] }
tracing = { workspace = true }

[features]
keyring = ["nostr-mcp-server/keyring"]

[dev-dependencies]
tempfile = { workspace = true }
